Fixes profile menu visibility

--- a/src/ej/static/ej/scss/components/main/_navigation.scss
+++ b/src/ej/static/ej/scss/components/main/_navigation.scss
@@ -375,7 +375,7 @@ body {
 
     &.hide {
         right: -20rem;
-        display: block;
+        display: block !important;
         visibility: hidden;
     }
 }
